# NicholasCooksFastAPIs

./: .gitignore  LICENSE  Makefile  README.md  alembic.ini  dev.py  devenv.nix  example.env  lambda.py  main.py  pyproject.toml
db/: README.md  env.py  script.py.mako
nicholascooks/: app.py
nicholascooks/orm/: models.py
nicholascooks/routers/: example_router.py  user_info_router.py
nicholascooks/utils/: crud.py  database.py  dependencies.py  exceptions.py  logger.py
tests/: test_example_router.py  test_main.py
